# pick-frame

./: .gitignore  .gitlab-ci.yml  README.md  build.zig  build.zig.zon
.github/workflows/: sync-to-gitlab.yml
lib/arg/: Cargo.toml  build.rs
lib/arg/src/: lexer.rs  lib.rs  tui.rs
src/: base_type.zig  cimport.zig  error.zig  frame_to_image.zig  main.zig  read_video_frame.zig  read_video_info.zig  util.zig
