[package]
name = "arg"
version = "0.1.1"
edition = "2024"

[lib]
name = "arg"
crate-type = ["staticlib"]

[features]
dsl = ["nom", "colored", "nom_locate"]

[dependencies.nom]
version = "8.0.0"
optional = true

[dependencies.colored]
version = "3.1.1"
optional = true

[dependencies.nom_locate]
version = "5.0.0"
optional = true

[dependencies.clap]
version = "4.5.54"
features = ["derive"]


[build-dependencies]
cbindgen = "0.29.2"

[profile.release]
debug = false
opt-level = 3
panic = "abort"
overflow-checks = false
debug-assertions = false

[profile.release-safe]
inherits = "release"
overflow-checks = true

[profile.release-small]
inherits = "release"
lto = true
debug = false
opt-level = "s"
panic = "abort"
codegen-units = 1
overflow-checks = false
debug-assertions = false
